--- a/boot01/src/main/resources/application.properties
+++ b/boot01/src/main/resources/application.properties
@@ -23,3 +23,17 @@ mybatis.mapper-locations=classpath:mapper/*/*.xml
 
 # Log : trace < debug < info < warn < error < fetal
 logging.level.com.yedam.app=DEBUG
+
+
+#MultiPartResolver Setting
+##메모리에 올릴 파일 크기
+spring.servlet.multipart.file-size-threshold=0B
+##임시 파일 위치
+spring.servlet.multipart.location=D:/upload
+##업로드 가능한 파일크기(파일별)
+spring.servlet.multipart.max-file-size=1MB
+##업로드 가능한 파일크기(요청별)
+spring.servlet.multipart.max-request-size=10MB
+
+# file upload path
+file.upload.path=D:/upload/
