--- a/boot02/src/main/resources/application.properties
+++ b/boot02/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=boot02
 server.port=80
+server.servlet.context-path=/web
 
 #DataSouce Setting(Oracle)
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
